aws/3-node/base/manifests/host-etcd-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: host-etcd
  namespace: kube-system
  annotations:
    alpha.installer.openshift.io/dns-suffix: clusterName.baseDomain
subsets:
- addresses:
  - ip: 192.0.2.1
    hostname: etcd-0
  - ip: 192.0.2.2
    hostname: etcd-1
  - ip: 192.0.2.3
    hostname: etcd-2
  ports:
  - name: etcd
    port: 2379
    protocol: TCP
